--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /wp-content/languages
 /wp-content/plugins/index.php
 /wp-content/themes/index.php
+/wp-content/backups-dup-lite
 /wp-includes/
 /index.php
 /license.txt
